TEST_PROGRAMS/VALID/05/func_call_no_trailing_comma.go
package main

func f1(a, b, c int) {
	//Do nothing
}

func main() {
	a, b, c := 3, 4, 5
	f1(a,b,c)
}
