TEST_PROGRAMS/INVALID/04/75.go
package main

func main() {
    // Illegal assignment
    a
      += a
}
